src/components/landpage/milestones/styles.module.scss
.container {
  position: relative;
  background: #000;
  padding: 100px 0;

  & > .container_cards {
    display: flex;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    width: 1200px;

    @media screen and (max-width: 995px) {
      flex-direction: column;
      justify-content: space-between;
      align-items: center;
      width: 100%;
      margin: 28px 0px;
    }

    & > .cards_card {
      position: relative;
      display: flex;
      flex-direction: column;
      width: 33.3%;
      height: 400px;
      margin: 30px 0;

      @media screen and (max-width: 995px) {
        margin: 0;
        width: 100%;
      }

      & > span {
        position: relative;
        color: #fff;
        text-align: center;
        margin: 15px 0;
      }

      &.animationwallet {
        .card_image {
          animation-delay: .5s;
        }

        .card_title {
          animation-delay: .7s;
        }

        .card_value {
          animation-delay: 1s;
        }
      }

      &.animationhorses {
        .card_image {
          animation-delay: .8s;
        }

        .card_title {
          animation-delay: 1.4s;
        }

        .card_value {
          animation-delay: 1.7s;
        }
      }

      &.animationvolume {
        .card_image {
          animation-delay: 1.1s;
        }

        .card_title {
          animation-delay: 2.1s;
        }

        .card_value {
          animation-delay: 2.4s;
        }
      }

      & > .card_image {
        align-self: center;
        width: 125px;
        height: 120px;
        opacity: 0;
        top: 50%;
        animation: fadeIn 1s ease-out;
        animation-fill-mode: forwards;

        @media screen and (max-width: 995px) {
          width: 180px;
          height: 171px;
        }
      }

      & > .card_title {
        font-family: 'UpheavalPro';
        font-size: 40px;
        opacity: 0;
        top: 50%;
        animation: fadeIn 1s ease-out;
        animation-fill-mode: forwards;
      }

      & > .card_value {
        font-family: 'SpaceHorse';
        font-size: 25px;
        opacity: 0;
        top: 50%;
        animation: fadeIn 1s ease-out;
        animation-fill-mode: forwards;
      }
    }
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
    top: 50%;
  }
  to {
    opacity: 1; 
    top: 0;
  }
}

